# hello_world_cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: hello_world_cpp.h
src/: hello_world_cpp.cpp
